[package]
name = "surf-pool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = [ "attributes" ]}
async-weighted-semaphore = "0.2.1"
surf = "2.2.0"
thiserror = "1.0.26"
