[package]
name = "surf-pool"
version = "0.2.0"
edition = "2018"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
keywords = ["surf", "async-std", "pool"]
description = "Crate to manage https connection pools with surf"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = [ "attributes" ]}
async-weighted-semaphore = "0.2.1"
surf = "2.2.0"
thiserror = "1.0.26"

[dev-dependencies]
futures-lite = "1.12.0"
